test/invalid/baseline/enum-bodyless.txt
Syntax error at line 1, since `enum X`:
enum X
      ^ Bodyless enum
